--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.0",
     "@reduxjs/toolkit": "^1.6.2",
@@ -14,7 +15,6 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/react-redux": "^7.1.20",
-    "axios": "^0.24.0",
     "node-sass": "6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
